
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fz_document_writer ;
typedef int fz_context ;


 int FZ_ERROR_GENERIC ;
 int * fz_new_cbz_writer (int *,char const*,char const*) ;
 int * fz_new_pam_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_pbm_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_pcl_writer (int *,char const*,char const*) ;
 int * fz_new_pclm_writer (int *,char const*,char const*) ;
 int * fz_new_pdf_writer (int *,char const*,char const*) ;
 int * fz_new_pgm_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_pkm_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_png_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_pnm_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_ppm_pixmap_writer (int *,char const*,char const*) ;
 int * fz_new_ps_writer (int *,char const*,char const*) ;
 int * fz_new_pwg_writer (int *,char const*,char const*) ;
 int * fz_new_svg_writer (int *,char const*,char const*) ;
 int * fz_new_text_writer (int *,char const*,char const*,char const*) ;
 int fz_strcasecmp (char const*,char*) ;
 int fz_throw (int *,int ,char*,...) ;
 char* strrchr (char const*,char) ;

fz_document_writer *
fz_new_document_writer(fz_context *ctx, const char *path, const char *format, const char *options)
{
 if (!format)
 {
  format = strrchr(path, '.');
  if (!format)
   fz_throw(ctx, FZ_ERROR_GENERIC, "cannot detect document format");
  format += 1;
 }

 if (!fz_strcasecmp(format, "cbz"))
  return fz_new_cbz_writer(ctx, path, options);




 if (!fz_strcasecmp(format, "svg"))
  return fz_new_svg_writer(ctx, path, options);

 if (!fz_strcasecmp(format, "png"))
  return fz_new_png_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pam"))
  return fz_new_pam_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pnm"))
  return fz_new_pnm_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pgm"))
  return fz_new_pgm_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "ppm"))
  return fz_new_ppm_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pbm"))
  return fz_new_pbm_pixmap_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pkm"))
  return fz_new_pkm_pixmap_writer(ctx, path, options);

 if (!fz_strcasecmp(format, "pcl"))
  return fz_new_pcl_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pclm"))
  return fz_new_pclm_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "ps"))
  return fz_new_ps_writer(ctx, path, options);
 if (!fz_strcasecmp(format, "pwg"))
  return fz_new_pwg_writer(ctx, path, options);

 if (!fz_strcasecmp(format, "txt") || !fz_strcasecmp(format, "text"))
  return fz_new_text_writer(ctx, "text", path, options);
 if (!fz_strcasecmp(format, "html"))
  return fz_new_text_writer(ctx, format, path, options);
 if (!fz_strcasecmp(format, "xhtml"))
  return fz_new_text_writer(ctx, format, path, options);
 if (!fz_strcasecmp(format, "stext"))
  return fz_new_text_writer(ctx, format, path, options);

 fz_throw(ctx, FZ_ERROR_GENERIC, "unknown output document format: %s", format);
}
